force-app/main/default/objects/Project_Access_Contact__c/fields/Box__c.field-meta.xml
<CustomField>
    <fullName>Box__c</fullName>
    <label>Box</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Requested</fullName>
                <default>true</default>
                <label>Access Requested</label>
            </value>
            <value>
                <fullName>Access Granted</fullName>
            </value>
            <value>
                <fullName>Access Removal Requested</fullName>
            </value>
            <value>
                <fullName>Access Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>