force-app/main/default/objects/Project_Access_Contact__c/fields/Box_Access_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Box_Access_Requested_Date__c</fullName>
    <inlineHelpText>When was Box Access Requested?</inlineHelpText>
    <label>Box Access Requested Date</label>
    <type>Date</type>
</CustomField>