force-app/main/default/objects/Project_Access_Contact__c/fields/Clarizen__c.field-meta.xml
<CustomField>
    <fullName>Clarizen__c</fullName>
    <label>Clarizen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Requested</fullName>
            </value>
            <value>
                <fullName>Access Granted</fullName>
            </value>
            <value>
                <fullName>Access Removal Requested</fullName>
            </value>
            <value>
                <fullName>Access Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>