force-app/main/default/objects/Project_Access_Contact__c/validationRules/Account_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Verification</fullName>
    <active>true</active>
    <description>The contact account must match the project account</description>
    <errorConditionFormula>NOT(Contact__r.Account.IntApp_Account_Number__c = Project__r.pse__Account__r.IntApp_Account_Number__c)
&amp;&amp;
NOT($Profile.Id=&quot;00e30000000bvR3&quot;)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Your Contact Account and Project Accounts don&apos;t match. Please pick a contact related to the Account your project is for.</errorMessage>
</ValidationRule>